--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
 :root{
   --text-color: #9E9AA8;
   --header-text-color: #34313D;
+  --bg-purple: #3A3054;
   --brand-color: #2BD0D0;
 }
 
@@ -79,10 +80,11 @@ img{
 /* BUTTON */
 .button {
   display: inline-block;
+  padding: 14px 40px 12px;
+  border: none;
   font-weight: bold;
 font-size: 20px;
 line-height: 30px;
-padding: 14px 40px 12px;
 background-color: var(--brand-color);
 color: #fff;
 text-transform: capitalize;
@@ -193,6 +195,7 @@ cursor: pointer;
 /* SITE-HERO */
 .site-hero {
   position: relative;
+  margin-bottom: 222px;
 }
 
 .site-hero-content{
@@ -220,9 +223,265 @@ cursor: pointer;
 
 .site-hero-img{
   position: absolute;
-  top: 0;
+  top: -100px;
   right: -288px;
   width: 733px;
   height: 482px;
   object-fit: cover;
+}
+
+.cta{
+  position: relative;
+  padding-top: 204px;
+  padding-bottom: 120px;
+  background-color: #EFF1F7;
+}
+
+.cta-form-content {
+  position: absolute;
+  top: 0;
+  transform: translateY(-50%);
+  padding: 52px 64px;
+  background-image: url("../img/cta-bg.svg");
+  border-radius: 10px;
+}
+
+.cta-form {
+}
+
+.cta-form-input {
+  width: 770px;
+  border-radius: 10px;
+  padding: 14px 32px;
+  background-color: #fff;
+  margin-right: 24px;
+font-size: 20px;
+line-height: 36px;
+letter-spacing: 0.15px;
+}
+
+.button-primery {
+  border-radius: 10px;
+  padding: 18px 40px 16px;
+}
+
+.cta-header {
+  margin-top: 0;
+  margin-bottom: 18px;
+  font-weight: bold;
+font-size: 40px;
+line-height: 48px;
+text-align: center;
+letter-spacing: -1px;
+color: var(--header-text-color);
+}
+
+.cta-text {
+  max-width: 540px;
+  margin-top: 0;
+  margin-bottom: 100px;
+  font-size: 18px;
+line-height: 32px;
+text-align: center;
+letter-spacing: 0.12px;
+margin-left: auto;
+margin-right: auto;
+}
+
+.cta-lists-wrapper{
+  position: relative;
+}
+
+.cta-lists {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: flex-start;
+}
+
+.cta-item {
+  position: relative;
+  z-index: 100;
+  padding: 77px 32px 41px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.cta-item:not(:last-child){
+  margin-right: 30px;
+}
+
+.cta-item::before{
+  content: "";
+  position: absolute;
+  top: -44px;
+  left: 32px;
+  display: block;
+  width: 88px;
+  height: 88px;
+  background-color: var(--bg-purple);
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+
+.cta-item:first-child::before{
+  background-image: url("../img/icon-brand-recognition.svg");
+}
+.cta-item:nth-child(2){
+  margin-top: 44px;
+}
+
+.cta-item:nth-child(2)::before{
+  background-image: url("../img/icon-records.svg");
+}
+
+.cta-item:nth-child(3){
+  margin-top: 88px;
+}
+
+.cta-item:nth-child(3)::before{
+  background-image: url("../img/icon-customization.svg");
+}
+
+.cta-lists-header {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+font-size: 22px;
+line-height: 33px;
+color: var(--header-text-color);
+}
+
+.cta-lists-text {
+  margin: 0;
+}
+
+.cta-line{
+  position: absolute;
+  top: 152px;
+  width: 100%;
+  height: 8px;
+  background-color: var(--brand-color);
+}
+
+.features {
+  padding-top: 57px;
+  padding-bottom: 57px;
+  background-color: var(--bg-purple);
+  background-image: url("../img/purple-bg.svg");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+
+.features-header {
+  margin-top: 0;
+  margin-bottom: 32px;
+  color: #fff;
+  font-weight: bold;
+font-size: 40px;
+line-height: 48px;
+text-align: center;
+letter-spacing: -1px;
+}
+
+
+.site-footer {
+  padding-top: 71px;
+  padding-bottom: 70px;
+  background-color:  #232127;
+  --text-color: #bFBFBF;
+  --header-text-color: #fff;
+}
+
+.site-footer-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.site-footer-logo-link{
+  margin-right: auto;
+}
+
+.site-footer-lists-wrapper {
+  text-transform: capitalize;
+}
+
+.site-footer-lists-header {
+  margin-top: 0;
+  margin-bottom: 22px;
+  font-weight: bold;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: -0.25px;
+color: var(--header-text-color);
+}
+
+
+.site-footer-lists {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-right: 100px;
+}
+
+.site-footer-item:not(:last-child){
+  margin-bottom: 10px;
+}
+
+.site-footer-item:hover .site-footer-link{
+  color: var(--brand-color);
+}
+
+.site-footer-item:active .site-footer-link{
+  opacity: 0.6;
+}
+
+.site-footer-link {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color);
+  line-height: 22px;
+letter-spacing: -0.23px;
+}
+
+.site-footer-social-lists {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.site-footer-social-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.site-footer-social-item:hover .site-footer-social-link{
+  color: var(--brand-color);
+}
+
+.site-footer-social-item:active .site-footer-social-link{
+  opacity: 0.6;
+}
+
+.site-footer-social-link {
+  display: block;
+  color: #fff;
+}
+
+.site-footer-social-img {
+  display: block;
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+
+.site-footer-social-item:nth-child(2) .site-footer-social-img{
+  height: 20px;
 }
