--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,10 @@ img{
 
 .main-content{
   flex-grow: 1;
-  margin-top: 100px;
+  padding-top: 100px;
+  background-image: url("../img/hero-bg.svg");
+  background-repeat: no-repeat;
+  background-position: left calc(50% + 450px) top;
 }
 
 *:focus{
@@ -251,15 +254,6 @@ cursor: pointer;
   font-size: 22px;
   line-height: 36px;
   letter-spacing: 0.15px;
-}
-
-.site-hero-img{
-  position: absolute;
-  top: -100px;
-  right: -288px;
-  width: 733px;
-  height: 482px;
-  object-fit: cover;
 }
 
 .cta{
